--- a/package.json
+++ b/package.json
@@ -16,19 +16,37 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
+    "@paypal/react-paypal-js": "^7.8.2",
+    "firebase": "^9.15.0",
+    "formik": "^2.2.9",
     "gatsby": "^5.4.0",
     "gatsby-plugin-image": "^3.4.0",
+    "gatsby-plugin-react-helmet": "^6.5.0",
+    "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sharp": "^5.4.0",
     "gatsby-plugin-sitemap": "^6.4.0",
     "gatsby-source-filesystem": "^5.4.0",
     "gatsby-transformer-sharp": "^5.4.0",
+    "material-ui-phone-number-2": "^1.3.0",
+    "mui-tel-input": "^3.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-helmet": "^6.1.6",
+    "autoprefixer": "^10.4.13",
+    "gatsby-plugin-postcss": "^6.4.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   }
 }
