--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@paypal/react-paypal-js": "^7.8.2",
+    "compressorjs": "^1.2.1",
     "firebase": "^9.15.0",
     "formik": "^2.2.9",
     "gatsby": "^5.4.0",
@@ -37,7 +38,8 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "stein-js-client": "^0.0.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
