made sheet add url

--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@google-cloud/storage": "^6.9.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@paypal/react-paypal-js": "^7.8.2",
+    "browserify-zlib": "^0.2.0",
+    "cloudinary": "^1.35.0",
+    "cloudinary-react": "^1.8.1",
     "compressorjs": "^1.2.1",
     "firebase": "^9.15.0",
     "formik": "^2.2.9",
@@ -37,7 +41,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-imgix": "^9.7.0",
+    "react-scripts": "^4.0.2",
     "stein-js-client": "^0.0.2",
+    "webpack": "^4.44.2",
     "yup": "^0.32.11",
     "zlib": "^1.0.5"
   },
@@ -46,6 +53,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-helmet": "^6.1.6",
+    "@types/react-imgix": "^9.5.0",
     "autoprefixer": "^10.4.13",
     "gatsby-plugin-postcss": "^6.4.0",
     "postcss": "^8.4.21",
