--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "cloudinary": "^1.35.0",
     "cloudinary-react": "^1.8.1",
     "compressorjs": "^1.2.1",
+    "deepmerge": "^4.3.1",
     "firebase": "^9.15.0",
     "formik": "^2.2.9",
     "gatsby": "^5.4.0",
+    "gatsby-plugin-google-gtag": "^5.8.0",
     "gatsby-plugin-image": "^3.4.0",
     "gatsby-plugin-react-helmet": "^6.5.0",
     "gatsby-plugin-react-svg": "^3.3.0",
@@ -44,9 +46,7 @@
     "react-imgix": "^9.7.0",
     "react-scripts": "^4.0.2",
     "stein-js-client": "^0.0.2",
-    "webpack": "^4.44.2",
-    "yup": "^0.32.11",
-    "zlib": "^1.0.5"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
